Fixed spacing issue.

--- a/javascript-typing-tutor/styles.css
+++ b/javascript-typing-tutor/styles.css
@@ -23,10 +23,10 @@
 }
 
 .text {
-  font-size: 3.5rem;
-  font-family: 'Courier New', Courier, monospace;
+  font-size: 2.5rem;
+  font-family: Courier, monospace;
   font-weight: bold;
-  letter-spacing: -10px;
+  display: flex;
 }
 
 .current {
